addressing feedback